welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:1: error: ';' expected but 'while' found.
do { avance() while (!estSurBlanc)}
              ^Program:4: error: 'while' expected but '}' found.
	}
        ^